<resources>
    <string name="app_name">Family Map Client</string>
    <string name="title_activity_maps">Family Map</string>
    <string name="Server_Host">Server Host:</string>
    <string name="Server_Port">Server Port:</string>
    <string name="User_Name">User Name:</string>
    <string name="Password">Password:</string>
    <string name="First_Name">First Name:</string>
    <string name="Last_Name">Last Name:</string>
    <string name="Email">Email:</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="server_host">Server_Host</string>

    <string name="settings_icon">settings_icon</string>
    <string name="search_icon">search_icon</string>
    <string name="female_icon">female_icon</string>
    <string name="todo">TODO</string>
</resources>
